<resources>
    <string name="app_name">doer</string>
    <string name="txt_tagline">Start planning your habit</string>>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_login">Login</string>
    <string name="txt_enter_email">Enter your email</string>
    <string name="txt_email">Email</string>
    <string name="txt_sample_email">name@domain.com</string>
    <string name="txt_next">Next</string>
    <string name="txt_password">Password</string>
    <string name="txt_full_name">Full Name</string>
    <string name="btn_back_description">Navigate to previous page</string>
    <string name="btn_close_description">Close form</string>
    <string name="form_description">Sign up details</string>
    <string name="txt_create_password">Create a password</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_sample_password">password</string>
    <string name="txt_sample_confirm_password">confirm password</string>
    <string name="txt_password_guide">Password must contain at least</string>
    <string-array name="password_guide">
        <item>1 number</item>
        <item>1 special character (example: # ? ! $)</item>
        <item>10 characters</item>
    </string-array>
    <string name="txt_birthdate_title">Select your birth date</string>
    <string name="txt_welcome_back">Welcome back</string>
    <string name="txt_log_in">Log in</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="icon_error_description">Error</string>
    <string name="txt_error_occurred">Error Occurred</string>
    <string name="btn_visibility_password">Toggle password visibility</string>
    <string name="txt_username_title">What do you go by?</string>
    <string name="txt_sample_username">John Doer</string>
    <string name="description_username_input">This appears on your doer profile.</string>
    <string name="txt_term_checkbox">I agree to the doer Terms of use and Privacy Policy</string>
    <string name="txt_create_account">Create account</string>
    <string name="txt_agree">Agree</string>
    <string name="txt_search">Search</string>
    <string name="btn_exit_description">Exit</string>
    <string name="description_scrollable_content">Scroll to see more</string>
    <string name="description_default_profile">Default profile container</string>
    <string name="description_default_spaces">Default spaces container</string>
    <string name="description_default_home">Default home container</string>
    <string name="description_default_challenge">Default challenge container</string>
    <string name="description_btn_profile">Go to profile container</string>
    <string name="description_btn_spaces">Go to  spaces container</string>
    <string name="description_btn_home">Go to  home container</string>
    <string name="description_btn_challenge">Go to  challenge container</string>
</resources>