<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_close_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_close_description"
            app:tint="@color/white"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/txt_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="@drawable/form_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:layout_marginBottom="20dp"
            android:text="@string/txt_welcome_back"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/txt_email"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_email_login"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:hint="@string/txt_sample_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/txt_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_password_login"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_style"
            android:drawableEnd="@drawable/visibility_off"
            android:ems="10"
            android:hint="@string/txt_sample_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:height="54dp"
            android:backgroundTint="@color/red"
            android:text="@string/txt_log_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="50dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/txt_forgot_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>