<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_close_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_close_description"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="@color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/txt_sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_enter_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="@drawable/form_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/txt_enter_email"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/txt_email"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:hint="@string/txt_sample_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <include
            android:id="@+id/block_email"
            layout="@layout/btn_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_create_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="@drawable/form_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible"
        android:weightSum="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8" />

        <LinearLayout
            android:id="@+id/ll_create_password_header"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="9">

            <include
                android:id="@+id/back_password"
                layout="@layout/btn_back" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:text="@string/txt_create_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/txt_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_style"
            android:drawableEnd="@drawable/visibility_off"
            android:ems="10"
            android:hint="@string/txt_sample_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/txt_confirm_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_style"
            android:drawableEnd="@drawable/visibility_off"
            android:ems="10"
            android:hint="@string/txt_sample_confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_password_guide"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/block_password_guide"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:orientation="vertical">

        </LinearLayout>

        <include
            android:id="@+id/block_password"
            layout="@layout/btn_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_birthdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="@drawable/form_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible"
        android:weightSum="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8" />

        <LinearLayout
            android:id="@+id/ll_birthdate_header"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="9">

            <include
                android:id="@+id/back_birthdate"
                layout="@layout/btn_back" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:text="@string/txt_birthdate_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <include
            android:id="@+id/block_birthdate"
            layout="@layout/btn_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="@drawable/form_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8" />

        <LinearLayout
            android:id="@+id/ll_username_header"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="12">

            <include
                android:id="@+id/back_username"
                layout="@layout/btn_back" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="9"
                android:text="@string/txt_username_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/input_username"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:hint="@string/txt_sample_username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/description_username_input"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal" />

        <View
            android:id="@+id/divider"
            android:layout_width="343dp"
            android:layout_height=".5dp"
            android:background="@drawable/divider_thin_horizontal" />

        <LinearLayout
            android:id="@+id/container_terms_privacy"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight=".5"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/checkbox_req_term_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:button="@drawable/checkbox_style"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_term_checkbox"
                android:textColor="@color/white" />

        </LinearLayout>

        <include
            android:id="@+id/block_username"
            layout="@layout/btn_create_account" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>