<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/ll_form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/pattern"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/italiana"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/txt_tagline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/txt_tagline"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="251dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/inter"
            android:text="@string/txt_sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="251dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/inter"
            android:text="@string/txt_login"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

        <include
            android:id="@+id/sign_up_overlay"
            layout="@layout/login_form"
            android:visibility="gone"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>